<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/menuID"
          android:icon="@drawable/ic_thumb_up"
          app:showAsAction="always"
          android:title="@string/til_neste_aktivitet"
          android:onClick="tilRegistrer"/>

    <item android:id="@id/menuID2"
        android:icon="@drawable/ic_action_coffee"
        app:showAsAction="always"
        android:title="@string/denne_knappen_gj_r_ikke_noe" />
    <item android:id="@id/menuID3"
        android:title="@string/dette_er_en_option"
        app:showAsAction="ifRoom" />
    <item android:id="@id/menuID4"
        android:title="@string/dette_ogs"
        app:showAsAction="ifRoom" />

</menu>